--- a/Lab 02/2137_report_template.tex
+++ b/Lab 02/2137_report_template.tex
@@ -69,20 +69,22 @@
 	
 	\section*{Summary}
 	
-	Gates are made up of switches (on/off). How you connect them determines the type of gate; 
-	Transistors are “voltage-controlled switches,” so we can hook gates together.  
+		Gates are made up of switches (on/off). How you connect them determines the type of gate; Transistors are “voltage-controlled switches,” so we can hook gates together.  \\
+		
 	
 	
 	\section*{Q\&A}
 	
 	\begin{enumerate}
-		\item What logic operation does it implement?
-		it's AND gate
+		\item What logic operation does it implement?\\
+		it's AND gate\\
 	\end{enumerate}
+	
 	
 	
 	\section*{Results}
 	
+		Table 1 is the truth table for the final gate I did in the lab. I keeped my NOR gate, and built two more inverters, then I connected one to each input (between the switch and the transistor of the NOR gate).   The truth table shows that the final gate is an AND gate.\\
 	\begin{table}[ht]\centering
 		\caption{Logic/truth table for the Final gate}
 		\label{tbl:example_table}
@@ -98,45 +100,25 @@
 		\end{tabular}
 	\end{table}
 	
+		Figure 1 and 2 are the circuit demonstration page I completed, they include the instuctor initials and the current paths for inverter, NOR gate, and final gate.\\
 	\begin{figure}[ht]\centering
-		\includegraphics[width=0.12\textwidth]{Lab2Page1}
+		\includegraphics[width=1.0\textwidth]{Lab2Page1}
 		\caption{This is the Circuit Demonstration Page 1.}
 		\label{fig:original_logo}
 	\end{figure}
 	
 	\begin{figure}[ht]\centering
-		\includegraphics[width=0.12\textwidth]{Lab2Page2}
+		\includegraphics[width=1.0\textwidth]{Lab2Page2}
 		\caption{This is the Circuit Demonstration Page 2.}
 		\label{fig:original_logo}
 	\end{figure}
+	
+	
 	
 	\section*{Code}
 	
-	\begin{table}[ht]\centering
-		\caption{Logic/truth table for the Final gate}
-		\label{tbl:example_table}
-		\begin{tabular}{cc|c}
-			\toprule
-			A & B & LED \\
-			\midrule
-			0 & 0 & 0 \\
-			0 & 1 & 0 \\
-			1 & 0 & 0 \\
-			1 & 1 & 1 \\
-			\bottomrule
-		\end{tabular}
-	\end{table}
+	There is no code require in this lab.\\
 	
-	\begin{figure}[ht]\centering
-		\includegraphics[width=1\textwidth]{Lab2Page1}
-		\caption{This is the Circuit Demonstration Page 1.}
-		\label{fig:original_logo}
-	\end{figure}
 	
-	\begin{figure}[ht]\centering
-		\includegraphics[width=1\textwidth]{Lab2Page2}
-		\caption{This is the Circuit Demonstration Page 2.}
-		\label{fig:original_logo}
-	\end{figure}
 	
 \end{document}
