--- a/Lab 04/2137_Lab4_report.tex
+++ b/Lab 04/2137_Lab4_report.tex
@@ -73,7 +73,13 @@ Type the summary of your experiment and results here.
 
 \section*{Q\&A}
 
-Answer questions posed in the lab assignment here.
+	\begin{enumerate}
+		\item Why did we use two full adders instead of a half adder and a full adder?
+		\item How many input combinations would it take to exhaustively test the adder/subtractor?
+		\item Why  were  the  combinations  given  in  the  truth table chosen?
+		\item Do the results from your adder/subtractor match what  you  would  expect  from  theory? Explain any discrepancies.
+		
+	\end{enumerate}
 
 
 \section*{Results}
