Lab 4 first draft
only structure

--- a/Lab 04/2137_Lab04_report.tex
+++ b/Lab 04/2137_Lab04_report.tex
@@ -60,36 +60,62 @@
 %=========== Body  ====================================
 \begin{document}
 
-\title{ELC 2137 Lab 02: Lab Title}
-\author{Put your name(s) here}
+\title{ELC 2137 Lab 04: Subtractor}
+\author{Yiting Wang}
 
 \maketitle
 
 
 \section*{Summary}
 
-Type the summary of your experiment and results here.  
+	In this lab, it is to compare various implementations of a two-bit adder/subtractor. This is a relatively simple circuit that has sufficient complexity to high light some important aspects of digital circuit design. After completing this lab, I can describe the operation of a two-bit adder/sub-tractor, and develop a moderately complex circuit on abreadboard using standard electrical parts, develop my own test procedure and verify op-eration of the circuit, also I may can recognize that digital circuits quickly become complex and difficult to implement in hardware
+
 
 
 \section*{Q\&A}
 
 	\begin{enumerate}
-		\item Why did we use two full adders instead of a half adder and a full adder?
-		\item How many input combinations would it take to exhaustively test the adder/subtractor?
-		\item Why  were  the  combinations  given  in  the  truth table chosen?
-		\item Do the results from your adder/subtractor match what  you  would  expect  from  theory? Explain any discrepancies.
+		\item Why did we use two full adders instead of a half adder and a full adder?\\
+		
+		\item How many input combinations would it take to exhaustively test the adder/subtractor?\\
+		
+		\item Why were the combinations given in the truth table chosen?\\
+		
+		\item Do the results from your adder/subtractor match what you would expect from theory? Explain any discrepancies.\\
 		
 	\end{enumerate}
 
 
+
 \section*{Results}
 
-In this section, put your simulation waveforms, results tables, pictures of hardware, and any other required items.
+	Figure 1 is the cricuit domonstration page. It has the HA and FA schematics and wiring diagrams, and three instructor signatures.\\
+	\begin{figure}[ht]\centering
+		\includegraphics[width=0.7\textwidth]{Lab3Page}
+		\caption{The Circuit Demonstration Page}
+		\label{fig:Lab3Page}
+	\end{figure}
+	
+	Figure 2 is the picture of my Half Adder circuit, I built it based on the Half Adder wiring diagrams I draw on the cricuit domonstration page.\\
+	\begin{figure}[ht]\centering
+		\includegraphics[width=1.0\textwidth,trim=20cm 15cm 20cm 15cm,clip]{HalfAdder}
+		\caption{The Half Adder Circuit}
+		\label{fig:HalfAdder}
+	\end{figure}
+	
+	Figure 3 is the picture of my Full Adder circuit, I built it based on the Full Adder wiring diagrams I draw on the cricuit domonstration page.\\
+	\begin{figure}[ht]\centering
+		\includegraphics[width=1.0\textwidth]{FullAdder}
+		\caption{The Full Adder Circuit}
+		\label{fig:FullAdder}
+	\end{figure}
+
 
 
 \section*{Code}
 
-Include all of the code you wrote or modified here.
+	There is no code require in this lab.\\	
+
 
 
 \end{document}
