lab4 first draft
add picture

--- a/Lab 04/2137_Lab04_report.tex
+++ b/Lab 04/2137_Lab04_report.tex
@@ -89,25 +89,25 @@
 
 \section*{Results}
 
-	Figure 1 is the cricuit domonstration page. It has the HA and FA schematics and wiring diagrams, and three instructor signatures.\\
+	Figure 1 is the picture of my two bit adder/subtractor circuit, I built it based on the two bit adder/subtractor schematic.\\
 	\begin{figure}[ht]\centering
-		\includegraphics[width=0.7\textwidth]{Lab3Page}
-		\caption{The Circuit Demonstration Page}
-		\label{fig:Lab3Page}
+		\includegraphics[width=0.7\textwidth,trim=5cm 5cm 5cm 5cm,clip]{2-bitSubtractor}
+		\caption{The  two bit adder/subtractor Circuit}
+		\label{fig:2-bitSubtractor}
 	\end{figure}
 	
-	Figure 2 is the picture of my Half Adder circuit, I built it based on the Half Adder wiring diagrams I draw on the cricuit domonstration page.\\
+	Figure 2 is the picture of my two-bit adder/subtractor schematic.\\
 	\begin{figure}[ht]\centering
-		\includegraphics[width=1.0\textwidth,trim=20cm 15cm 20cm 15cm,clip]{HalfAdder}
-		\caption{The Half Adder Circuit}
-		\label{fig:HalfAdder}
+		\includegraphics[width=1.0\textwidth]{Schematic}
+		\caption{The two-bit adder/subtractor schematic}
+		\label{fig:Schematic}
 	\end{figure}
 	
-	Figure 3 is the picture of my Full Adder circuit, I built it based on the Full Adder wiring diagrams I draw on the cricuit domonstration page.\\
+	Figure 3 is the cricuit domonstration page. It has theERT and instructor signature.\\
 	\begin{figure}[ht]\centering
-		\includegraphics[width=1.0\textwidth]{FullAdder}
-		\caption{The Full Adder Circuit}
-		\label{fig:FullAdder}
+		\includegraphics[width=1.0\textwidth]{Lab4Page}
+		\caption{The cricuit domonstration page}
+		\label{fig:Lab4Page}
 	\end{figure}
 
 
