--- a/Lab 04/2137_Lab04_report.tex
+++ b/Lab 04/2137_Lab04_report.tex
@@ -76,11 +76,12 @@
 
 	\begin{enumerate}
 		\item Why did we use two full adders instead of a half adder and a full adder?\\
-		
+			The main difference between a half-adder and a full-adder is that the full-adder has three inputs and two outputs. The first two inputs are A and B and the third input is an input carry designated as CIN. In here, we use two full adders instead of a half adder and a full adder, cause we need a third input to repersent the signed number.\\
+			
 		\item How many input combinations would it take to exhaustively test the adder/subtractor?\\
-		
+			16.\\
 		\item Why were the combinations given in the truth table chosen?\\
-		
+			Cause we have different combinations of inputs
 		\item Do the results from your adder/subtractor match what you would expect from theory? Explain any discrepancies.\\
 		
 	\end{enumerate}
