--- a/Lab05/2137_Lab05_report_template.tex
+++ b/Lab05/2137_Lab05_report_template.tex
@@ -60,7 +60,7 @@
 %=========== Body  ====================================
 \begin{document}
 
-\title{ELC 2137 Lab 02: Lab Title}
+\title{ELC 2137 Lab 03: Lab Title}
 \author{Put your name(s) here}
 
 \maketitle
@@ -83,7 +83,23 @@ In this section, put your simulation waveforms, results tables, pictures of hard
 
 \section*{Code}
 
-Include all of the code you wrote or modified here.
+\subsection*{File Inclusion}
+\Verilog[caption=Half Adder Verilog code,label=code:file_ex]{halfadder.sv}
+
+\subsection*{File Inclusion}
+\Verilog[caption=Half Adder Verilog code,label=code:file_ex]{halfadder.sv}
+
+\subsection*{File Inclusion}
+\Verilog[caption=Half Adder Verilog code,label=code:file_ex]{halfadder.sv}
+
+\subsection*{File Inclusion}
+\Verilog[caption=Half Adder Verilog code,label=code:file_ex]{halfadder.sv}
+
+\subsection*{File Inclusion}
+\Verilog[caption=Half Adder Verilog code,label=code:file_ex]{halfadder.sv}
+
+\subsection*{File Inclusion}
+\Verilog[caption=Half Adder Verilog code,label=code:file_ex]{halfadder.sv}
 
 
 \end{document}
