--- a/Lab05/2137_Lab05_report_template.tex
+++ b/Lab05/2137_Lab05_report_template.tex
@@ -85,6 +85,13 @@ In this Lab we are going to describe digital circuits with code,  or a  hardware
 
 \section*{Results}
 
+Firgure is the block diagrams for half adder module. \\
+\begin{figure}[ht]\centering    
+	\includegraphics[width=0.5\textwidth]{halfadder}    
+	\caption{This is the block diagrams for half adder module.}    
+	\label{fig:halfadder}
+\end{figure}
+
 Firgure is the simulation waveform and ERT of half adder, this simulation matches the expected output values, and the code about that is in the Code section. \\
 \begin{figure}[ht]\centering
 	\begin{tabular}{l|rrrr}
@@ -101,6 +108,13 @@ Firgure is the simulation waveform and ERT of half adder, this simulation matche
 	\includegraphics{HalfAdderSimulation}
 	\caption{the simulation waveform and ERT of half adder}
 	\label{fig:HalfAdderSimulation}
+\end{figure}
+
+Firgure is the block diagrams for full adder module. \\
+\begin{figure}[ht]\centering    
+	\includegraphics[width=0.5\textwidth]{fulladder}    
+	\caption{This is the block diagrams for full adder module.}    
+	\label{fig:fulladder}
 \end{figure}
 
 Firgure is the simulation waveform and ERT of full adder, this simulation matches the expected output values, and the code about that is in the Code section. \\
@@ -120,6 +134,13 @@ Firgure is the simulation waveform and ERT of full adder, this simulation matche
 	\includegraphics{FullAdderSimulation}
 	\caption{the simulation waveform and ERT of full adder}
 	\label{fig:FullAdderSimulation}
+\end{figure}
+
+Firgure is the block diagrams for two bit adder/subtractor module. \\
+\begin{figure}[ht]\centering    
+	\includegraphics[width=0.5\textwidth]{addsub}    
+	\caption{This is the block diagrams for two bit adder/subtractor module.}    
+	\label{fig:addsub}
 \end{figure}
 
 Firgure is the simulation waveform and ERT of two bit adder/subtractor, this simulation doesn't match the expected output values, and the code about that is in the Code section. \\
