lab 5 final draft
adjust figure

--- a/Lab05/2137_Lab05_report_template.tex
+++ b/Lab05/2137_Lab05_report_template.tex
@@ -85,14 +85,14 @@ In this Lab we are going to describe digital circuits with code,  or a  hardware
 
 \section*{Results}
 
-Firgure is the block diagrams for half adder module. \\
+Firgure 1 is the block diagrams for half adder module. \\
 \begin{figure}[ht]\centering    
 	\includegraphics[width=0.5\textwidth]{halfadder}    
 	\caption{This is the block diagrams for half adder module.}    
 	\label{fig:halfadder}
 \end{figure}
 
-Firgure is the simulation waveform and ERT of half adder, this simulation matches the expected output values, and the code about that is in the Code section. \\
+Firgure 2 is the simulation waveform and ERT of half adder, this simulation matches the expected output values, and the code about that is in the Code section. \\
 \begin{figure}[ht]\centering
 	\begin{tabular}{l|rrrr}
 		Time (ns): & 0 & 10 & 20 & 30 \\
@@ -105,19 +105,19 @@ Firgure is the simulation waveform and ERT of half adder, this simulation matche
 		\bottomrule
 	\end{tabular}\medskip
 		
-	\includegraphics{HalfAdderSimulation}
+	\includegraphics[width=1\textwidth]{HalfAdderSimulation}
 	\caption{the simulation waveform and ERT of half adder}
 	\label{fig:HalfAdderSimulation}
 \end{figure}
 
-Firgure is the block diagrams for full adder module. \\
+Firgure 3 is the block diagrams for full adder module. \\
 \begin{figure}[ht]\centering    
 	\includegraphics[width=0.5\textwidth]{fulladder}    
 	\caption{This is the block diagrams for full adder module.}    
 	\label{fig:fulladder}
 \end{figure}
 
-Firgure is the simulation waveform and ERT of full adder, this simulation matches the expected output values, and the code about that is in the Code section. \\
+Firgure 4 is the simulation waveform and ERT of full adder, this simulation matches the expected output values, and the code about that is in the Code section. \\
 \begin{figure}[ht]\centering
 	\begin{tabular}{l|rrrr|rrrr}
 		Time (ns): & 0 & 10 & 20 & 30 & 40 & 50 & 60 & 70\\
@@ -131,22 +131,22 @@ Firgure is the simulation waveform and ERT of full adder, this simulation matche
 		\bottomrule
 	\end{tabular}\medskip
 		
-	\includegraphics{FullAdderSimulation}
+	\includegraphics[width=1\textwidth]{FullAdderSimulation}
 	\caption{the simulation waveform and ERT of full adder}
 	\label{fig:FullAdderSimulation}
 \end{figure}
 
-Firgure is the block diagrams for two bit adder/subtractor module. \\
+Firgure 5 is the block diagrams for two bit adder/subtractor module. \\
 \begin{figure}[ht]\centering    
 	\includegraphics[width=0.5\textwidth]{addsub}    
 	\caption{This is the block diagrams for two bit adder/subtractor module.}    
 	\label{fig:addsub}
 \end{figure}
 
-Firgure is the simulation waveform and ERT of two bit adder/subtractor, this simulation doesn't match the expected output values, and the code about that is in the Code section. \\
+Firgure 6 is the simulation waveform and ERT of two bit adder/subtractor, this simulation doesn't match the expected output values, and the code about that is in the Code section. \\
 \begin{figure}[ht]\centering
 	\begin{tabular}{l|rrrr|rrrr|rrrr|rr}
-		Time (ns): & 0 & 10 & 20 & 30 & 40 & 50 & 60 & 70 & 80 & 90 & 100 & 110 & 120 & 130 & 140 \\
+		Time (ns): & 0 & 10 & 20 & 30 & 40 & 50 & 60 & 70 & 80 & 90 & 100 & 110 & 120 & 130 \\
 		\midrule
 		A1A0 & 00 & 00 & 00 & 00 & 01 & 10 & 10 & 00 & 00 & 00 & 00 & 01 & 10 & 10 \\
 		B1B0 & 00 & 01 & 10 & 11 & 01 & 01 & 00 & 00 & 01 & 10 & 11 & 01 & 01 & 00 \\
@@ -158,7 +158,7 @@ Firgure is the simulation waveform and ERT of two bit adder/subtractor, this sim
 		\bottomrule
 	\end{tabular}\medskip
 		
-	\includegraphics{AddSubSimulation}
+	\includegraphics[width=1\textwidth]{AddSubSimulation}
 	\caption{the simulation waveform and ERT of two bit adder/subtractor}
 	\label{fig:AddSubSimulation}
 \end{figure}
